# homework

./: .gitignore  README.md
ansi/c/src/: main.c
controller_systems/: README.md
controller_systems/lab_00/: CMakeLists.txt  conanfile.py
controller_systems/lab_00/src/: CMakeLists.txt  common.c  common.h  main.c
controller_systems/lab_00/test/: CMakeLists.txt  common_test.c  main.c
controller_systems/lab_01/: Makefile
controller_systems/lab_01/src/: main.asm
controller_systems/lab_04/: Makefile  mspdebug.gdb
controller_systems/lab_04/examples/: memCopyExample.asm  move_modes.asm  swSpiAssmb.asm
controller_systems/lab_04/src/: main.asm  transition.asm
controller_systems/lab_08/: Makefile  mspdebug.gdb
controller_systems/lab_08/src/: encoder.c  encoder.h  main.c  p6_interrupt.h
intro_to_c/flowcharts/: hello.dot
intro_to_c/lab_01/src/: main.c
intro_to_c/lab_02/: golf  golf.c  lab2  lab2.c  main.c
intro_to_c/lab_03/asm/src/: factorial.asm  main.asm  user_input.asm
intro_to_c/lab_03/c/src/: coordinate.c
intro_to_c/lab_04/c/: Makefile
intro_to_c/lab_04/c/src/: even_or_odd.h  floor.c  floor.h  main.c  overtime.c  squaring.c  user_time.c  user_time.h
intro_to_c/lab_05/: README.md  conanfile.py
intro_to_c/lab_05/docs/: Makefile  flow_1.dot
intro_to_c/lab_05/src/: CMakeLists.txt  factorize.h  prime.c  table.c  table.h
intro_to_c/lab_05/src/cache/: CMakeLists.txt  cache.h
intro_to_c/lab_05/test/: counter_test.c
intro_to_c/lab_06/src/: common.h  conio.c  conio.h  main.c
intro_to_c/lab_06/test/: CMakeLists.txt  main.c  sorter_test.c
intro_to_c/scara_lab/: README.md
intro_to_c/scara_lab/src/: main.c  scara_lab.c  scara_lab.h
intro_to_c/scara_lab/src/kinematics/: CMakeLists.txt  coordinates.c  coordinates.h  forward_kinematics.c  inverse_kinematics.h  limits.c
intro_to_c/scara_lab/src/line/: CMakeLists.txt
intro_to_c/scara_lab/src/network/: tcp_connection.c
intro_to_c/scara_lab/src/user_interface/: CMakeLists.txt  intent_error.c  intent_parser.c  intent_parser.h  motion_intent.c  motion_intent.h  state_intent.h  user_interface.h  validate_number.h
intro_to_c/scara_lab/test/: CMakeLists.txt  scara_test.h
intro_to_c/scara_lab/test/kinematics/: coordinates_test.c  forward_kinematics_test.h  inverse_kinematics_test.c
intro_to_c/scara_lab/test/path_planner/: path_planner_test.c
intro_to_c/tui/: CMakeLists.txt  conanfile.py
intro_to_c/tui/include/: tui.h
intro_to_c/tui/src/: tui.c
lab_01/: Makefile
lab_01/src/: a.out
lab_03/: Makefile  coordinate.c  coordinate.h  error_code.c  factorial.c  fibonacci.c  fibonacci.h  main.c  main.h
lab_03/asm/: Makefile  fib.asm  user_input.asm
lab_03/asm/src/: fib.asm
lab_03/c/: Makefile  README.md
lab_03/c/src/: coordinate.h  factorial.h  fibonacci.c  main.c  main.h
lab_03/src/: error_code.h  fibonacci.c  fibonacci.h  main.c
lab_04/c/src/: even_or_odd.c  even_or_odd.h  floor.c  main.c  main.h  overtime.c  overtime.h  screen_writer.c  screen_writer.h  squaring.c  squaring.h  user_time.c
lab_05/: CMakeLists.txt  main.h
lab_05/c/: CMakeLists.txt  Makefile  conanfile.py
lab_05/c/docs/: flow_1.dot  flow_2.dot
lab_05/c/src/: counter.c  counter.h  factorize.h  main.c  prime.c  prime.h
lab_05/c/test/: CMakeLists.txt  factorize.c  main.c  prime.c  prime_test.c  test_includes.h
lab_05/src/: counter.c  counter.h  factorize.c  factorize.h  main.c  main.h  prime.c  prime.h  table.c  table.h
lab_05/src/cache/: cache.c
lab_05/test/: CMakeLists.txt  cache_test.c  factorize.c  factorize_test.c  main.c  prime_test.c  test_includes.h
lab_06/: CMakeLists.txt  conanfile.py
lab_06/src/: CMakeLists.txt  common.c  common.h  main.c  other.c  sorter.c  sorter.h
lab_06/test/: CMakeLists.txt  common_test.c  main.c
quiz_5/src/: die.c  die.h
scara_lab/: CMakeLists.txt  conanfile.py
scara_lab/src/: CMakeLists.txt  intent_parser.c  intent_parser.h  main.c  scara_lab.h  tokens.c  tokens.h
scara_lab/src/kinematics/: CMakeLists.txt  coordinates.c  coordinates.h  errors.h  forward_kinematics.c  forward_kinematics.h  handedness.c  handedness.h  inverse_kinematics.c  inverse_kinematics.h  kinematics.h  limits.h  path.c  path.h  path_divider.c  path_divider.h  scara_state.h
scara_lab/src/line/: line.c  line.h
scara_lab/src/network/: CMakeLists.txt  commands.c  commands.h  network.h  tcp_connection.c  tcp_connection.h
scara_lab/src/path_planner/: CMakeLists.txt  path_planner.c  path_planner.h
scara_lab/src/user_interface/: CMakeLists.txt  intent_error.h  intent_parser.c  intent_parser.h  motion_intent.c  state_intent.c  tokens.c  user_interface.h  validate_number.c
scara_lab/test/: CMakeLists.txt  conanfile.py  main.c  scara_test.c
scara_lab/test/kinematics/: CMakeLists.txt  coordinates_test.h  forward_kinematics_test.c  inverse_kinematics_test.c  inverse_kinematics_test.h  kinematics_test.h  path_divider_test.c  path_divider_test.h  path_test.c  path_test.h
scara_lab/test/path_planner/: CMakeLists.txt  path_planner_test.c  path_planner_test.h
tui/: conanfile.py
tui/include/: tui.h
tui/src/: tui.c
